--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "Smooth is a small JavaScript module based on VirtualScroll to create smooth scrolling and parallax effects on scroll.",
   "main": "index.js",
   "dependencies": {
-    "dom-classes": "github:npm-dom/dom-classes",
+    "dom-classes": "^1.0.0",
     "dom-create-element": "^1.0.2",
     "dom-events": "^0.1.1",
     "prefix": "^1.0.0",
     "virtual-scroll": "^1.1.0"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015": "^6.22.0",
     "babelify": "^7.3.0",
-    "watchify": "^3.7.0"
+    "uglifyjs": "^2.4.10",
+    "watchify": "^3.9.0"
   },
   "scripts": {
     "dev": "watchify -v -t babelify index.js -o smooth-scrolling.js",
